--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shorcut icon" type="image/png" href="assets/images/icono.jpg">
+  <meta name="author" content="Samuel Sánchez">
+  <meta name="description"
+    content="Diseñador Web con más de cinco años de experiencia, conocimientos sólidos en maquetación web, prototipado, Diseño UI y Frontend.">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -18,9 +22,10 @@
 
 <body>
   <!-- Menú -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-blue-ss">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blue-ss fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#"><img src="assets/images/logo-ss.png" width="200"
+          alt="Portafolio Samuel Sánchez"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,18 +33,97 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Sobre mi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Experiencias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Trabajos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+  </nav><!-- Fin Menú -->
+
+  <!-- Carrusel Desktop -->
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade mb-md-5 d-none d-sm-block" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/images/background-section.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="title-carousel">¡HOLA, SOY SAMUEL!</h1>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/images/background-section.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="title-carousel">Diseñador Web & UX/UI</h2>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div><!-- Fin Carrusel Desktop -->
+
+  <!-- Carrusel Mobile -->
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade mb-md-5 d-block d-sm-none" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/images/samueldsweb.gif" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+        <div class="carousel-caption">
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div><!-- Fin Carrusel Mobile -->
+
+
+
+  <!-- Foto Personal -->
+  <div class="container d-none d-lg-block">
+    <img src="assets/images/foto-samuel.jpg" alt="Fotografía Samuel Sánchez" class="foto rounded-circle">
+  </div><!-- Fin Foto Personal -->
+
+
+  <!-- Texto sobre mi -->
+  <section class="my-md-5 py-5">
+    <div class="container py-md-4">
+      <h3 class="font-700">SOBRE MI</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <p class="text-justify estracto">
+            Soy Diseñador Web con más de cinco años de experiencia, poseo conocimientos sólidos en maquetación web, prototipado, Diseño UI y Frontend. Amplia experiencia realizando diseños centrados al usuario.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <p class="text-justify estracto">
+            En el área profesional me motivan las ganas de crecer,  evidenciando facilidad para el aprendizaje y disposición para escenarios retadores, me apasiona enseñar los que sé y nutrirme de conocimientos constantemente.
+          </p>
+        </div>
+      </div>
+      <hr class="linea-primaria">
+    </div>
+  </section><!-- TFin exto sobre mi -->
+
+
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
