--- a/index.html
+++ b/index.html
@@ -232,19 +232,82 @@
             </div>
           </div>
 
+          <!-- Ver Más -->
+          <div class="col-12 pb-5 text-center">
+            <a class="text-vermas" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Ver Más &nbsp;<i class="fas fa-plus"></i></a>
+          </div>
+
+          <div class="collapse" id="collapseExample">
+            <div class="row">
+              <div class="col-md-4 pb-5">
+                <div class="card mx-2">
+                  <img src="assets/images/isispa.png" class="card-img-top" alt="eCommerce Importadora Isidora">
+                  <div class="card-body">
+                    <h5 class="card-title">ISISPA</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="https://isispa.cl/" class="btn btn-ss">Ir al sitio</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 pb-5">
+                <div class="card mx-2">
+                  <img src="assets/images/decar.png" class="card-img-top" alt="Sitio Autos Decar Usados">
+                  <div class="card-body">
+                    <h5 class="card-title">Automóviles Decar</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="http://decarseminuevos.cl/seminuevos" class="btn btn-ss">Ir al sitio</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 pb-5">
+                <div class="card mx-2">
+                  <img src="assets/images/electrogame.png" class="card-img-top" alt="eCommerce Electrogame">
+                  <div class="card-body">
+                    <h5 class="card-title">Electrogame</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="https://electrogame.cl/" class="btn btn-ss">Ir al sitio</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin, Ver Más -->
+
         </div>
       </div>
     </div>
   </section><!-- Fin, Mis últimos trabajos -->
 
+  <!-- Icono de Whatsapp -->
+  <a href="wa.link/j4jdln" target="_blank">
+    <img src="assets/images/whatsapp.png" alt="Escribeme al whatsapp" class="ws-flotante" data-toggle="tooltip" data-placement="top" title="Escríbeme al WhatsApp">
+  </a>
 
+  <footer>
+    <div class="container-fluid bg-greenblue-ss">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <img src="assets/images/icono.jpg" alt="Logo SS" class="img-fluid rounded-top img-footer" width="180">
+          </div>
+          <div class="col-md-4 align-self-center">
+            <a class="icon-footer mr-3" href="https://github.com/samueldsweb/"><i class="fab fa-github-square"></i></a>
+            <a class="icon-footer mr-3" href="https://www.linkedin.com/in/samueldsweb/"><i class="fab fa-linkedin"></i></a>
+            <a class="icon-footer mr-3" href="https://www.instagram.com/samueldsweb/"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-
-  <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- Optional JavaScript -->
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
