se crean sliders y se modifica el boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     <!-- Menú -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue-ss fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/logo-ss.png" width="200"
-            alt="Portafolio Samuel Sánchez"></a>
+        <a class="navbar-brand" href="#"><img src="assets/images/logo-ss.png" width="200" alt="Portafolio Samuel Sánchez" class="d-none d-sm-block"></a>
+        <a class="navbar-brand mr-auto" href="#"><img src="assets/images/icono.jpg" width="80" alt="Portafolio Samuel Sánchez" class="d-block d-sm-none"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -167,15 +167,15 @@
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade mb-md-5 d-none d-sm-block" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/images/background-section.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+          <img src="assets/images/background-section-1.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
           <div class="carousel-caption d-none d-md-block">
             <h1 class="title-carousel">¡HOLA, SOY SAMUEL!</h1>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/images/background-section.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+          <img src="assets/images/background-section-2.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
           <div class="carousel-caption d-none d-md-block">
-            <h2 class="title-carousel">DISEÑADOR WEB & UX/UI</h2>
+            <h2 class="title-carousel-2">DISEÑADOR WEB & UX/UI</h2>
           </div>
         </div>
       </div>
@@ -396,7 +396,7 @@
   <!-- Typeform -->
   <div class="typeform-widget" data-url="https://form.typeform.com/to/PHCW8IiJ" style="width: 100%; height: 500px;" id="contacto"></div>
   <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-  <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> Desarrollado por <a href="https://admin.typeform.com/signup?utm_campaign=PHCW8IiJ&utm_source=typeform.com-01EKRDTS4NMH6287TXHY135HAG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>  
+  <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> Formulario desarrollado por <a href="https://admin.typeform.com/signup?utm_campaign=PHCW8IiJ&utm_source=typeform.com-01EKRDTS4NMH6287TXHY135HAG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>  
   
   <!-- Icono de Whatsapp -->
   <a href="wa.link/j4jdln" target="_blank">
@@ -411,9 +411,9 @@
             <img src="assets/images/icono.jpg" alt="Logo SS" class="img-fluid rounded-top img-footer" width="180">
           </div>
           <div class="col-md-4 align-self-center">
-            <a class="icon-footer mr-3" href="https://github.com/samueldsweb/"><i class="fab fa-github-square"></i></a>
-            <a class="icon-footer mr-3" href="https://www.linkedin.com/in/samueldsweb/"><i class="fab fa-linkedin"></i></a>
-            <a class="icon-footer mr-3" href="https://www.instagram.com/samueldsweb/"><i class="fab fa-instagram"></i></a>
+            <a class="icon-footer mr-3" href="https://github.com/samueldsweb/" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a class="icon-footer mr-3" href="https://www.linkedin.com/in/samueldsweb/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a class="icon-footer mr-3" href="https://www.instagram.com/samueldsweb/" target="_blank"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
       </div>
