Se agrega link al segundo slider

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/images/background-section-2.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+          <a href="https://bmwusados.cl/" target="_blank"><img src="assets/images/background-section-2.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez"></a>
           <div class="carousel-caption d-none d-md-block">
             <h2 class="title-carousel-2">DISEÑADOR WEB & UX/UI</h2>
           </div>
