--- a/index.html
+++ b/index.html
@@ -394,14 +394,16 @@
   </section><!-- Fin, Mis últimos trabajos -->
 
   <!-- Typeform -->
-  <div class="typeform-widget" data-url="https://form.typeform.com/to/PHCW8IiJ" style="width: 100%; height: 500px;" id="contacto"></div>
-  <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-  <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> Formulario desarrollado por <a href="https://admin.typeform.com/signup?utm_campaign=PHCW8IiJ&utm_source=typeform.com-01EKRDTS4NMH6287TXHY135HAG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>  
-  
+  <div class="mb-5">
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/PHCW8IiJ" style="width: 100%; height: 500px;" id="contacto"></div>
+    <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> Formulario desarrollado por <a href="https://admin.typeform.com/signup?utm_campaign=PHCW8IiJ&utm_source=typeform.com-01EKRDTS4NMH6287TXHY135HAG-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>  
+  </div><!-- Fin, Typeform -->
+
   <!-- Icono de Whatsapp -->
   <a href="wa.link/j4jdln" target="_blank">
     <img src="assets/images/whatsapp.png" alt="Escribeme al whatsapp" class="ws-flotante" data-toggle="tooltip" data-placement="top" title="Escríbeme al WhatsApp">
-  </a>
+  </a><!-- Fin, Icono de Whatsapp -->
 
   <footer>
     <div class="container-fluid bg-greenblue-ss">
