se realizan ajustes dados por el validator w3c.

--- a/index.html
+++ b/index.html
@@ -134,80 +134,67 @@
         </div>
       </div>
     </div><!-- Fin, Agencia Destaados -->
-
-    <!-- Menú -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-blue-ss fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/logo-ss.png" width="200" alt="Portafolio Samuel Sánchez" class="d-none d-sm-block"></a>
-        <a class="navbar-brand mr-auto" href="#"><img src="assets/images/icono.jpg" width="80" alt="Portafolio Samuel Sánchez" class="d-block d-sm-none"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#sobremi">Sobre mi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experiencias">Experiencias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#trabajos">Trabajos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav><!-- Fin Menú -->
-
-    <!-- Carrusel Desktop -->
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade mb-md-5 d-none d-sm-block" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/images/background-section-1.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
-          <div class="carousel-caption d-none d-md-block">
-            <h1 class="title-carousel">¡HOLA, SOY SAMUEL!</h1>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <a href="https://bmwusados.cl/" target="_blank"><img src="assets/images/background-section-2.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez"></a>
-          <div class="carousel-caption d-none d-md-block">
-            <h2 class="title-carousel-2">DISEÑADOR WEB & UX/UI</h2>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- Fin Carrusel Desktop -->
-
-    <!-- Carrusel Mobile -->
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade mb-md-5 d-block d-sm-none" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/images/samueldsweb.gif" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
-          <div class="carousel-caption">
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- Fin Carrusel Mobile -->
   <!-- Fin, Modales de Experiencias Laborales -->
+
+  <!-- Menú -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blue-ss fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="assets/images/logo-ss.png" width="200" alt="Portafolio Samuel Sánchez" class="d-none d-sm-block"></a>
+      <a class="navbar-brand mr-auto" href="#"><img src="assets/images/icono-menu.jpg" width="80" alt="Portafolio Samuel Sánchez" class="d-block d-sm-none"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#sobremi">Sobre mi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experiencias">Experiencias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#trabajos">Trabajos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav><!-- Fin Menú -->
+
+  <!-- Carrusel Desktop -->
+  <div id="carouselDesktop" class="carousel slide carousel-fade mb-md-5 d-none d-sm-block" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/images/background-section-1.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="title-carousel">¡HOLA, SOY SAMUEL!</h1>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="https://bmwusados.cl/" target="_blank"><img src="assets/images/background-section-2.jpg" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="title-carousel-2">DISEÑADOR WEB & UX/UI</h2>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselDesktop" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselDesktop" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div><!-- Fin Carrusel Desktop -->
+
+  <!-- Banner Mobile -->
+  <div class="container-fluid mb-md-5 px-0 d-block d-sm-none">
+    <img src="assets/images/samueldsweb.gif" class="d-block w-100" alt="Área de Trabajo de Samuel Sánchez">
+  </div>
+  <!-- Fin Banner Mobile -->
 
   <!-- Foto Personal -->
   <div class="container d-none d-lg-block">
@@ -347,7 +334,7 @@
 
           <!-- Ver Más -->
           <div class="col-12 pb-5 text-center">
-            <a class="text-vermas" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Ver Más &nbsp;<i class="fas fa-plus"></i></a>
+            <button class="btn btn-ss-mas" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Ver Más &nbsp;<i class="fas fa-plus"></i></button>
           </div>
 
           <div class="collapse" id="collapseExample">
