se soluciona link de whatsapp

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shorcut icon" type="image/png" href="assets/images/icono.jpg">
   <meta name="author" content="Samuel Sánchez">
-  <meta name="description"
-    content="Diseñador Web con más de cinco años de experiencia, conocimientos sólidos en maquetación web, prototipado, Diseño UI y Frontend.">
+  <meta name="description" content="Diseñador Web con más de cinco años de experiencia, conocimientos sólidos en maquetación web, prototipado, Diseño UI y Frontend.">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -23,6 +22,7 @@
 </head>
 
 <body>
+
   <!-- Modales de Experiencias Laborales -->
     <!-- UCV -->
     <div class="modal fade" id="modalucv" tabindex="-1" aria-labelledby="modalucvLabel" aria-hidden="true">
@@ -388,7 +388,7 @@
   </div><!-- Fin, Typeform -->
 
   <!-- Icono de Whatsapp -->
-  <a href="wa.link/j4jdln" target="_blank">
+  <a href="https://wa.link/j4jdln" target="_blank">
     <img src="assets/images/whatsapp.png" alt="Escribeme al whatsapp" class="ws-flotante" data-toggle="tooltip" data-placement="top" title="Escríbeme al WhatsApp">
   </a><!-- Fin, Icono de Whatsapp -->
 
